vlib/v/checker/tests/nil_to_option_err.out
vlib/v/checker/tests/nil_to_option_err.vv:8:4: warning: cannot assign a reference to a value (this will be an error soon) left=int false right=nil true ptr=false
    6 | fn main() {
    7 |     mut a := ?int(none)
    8 |     a = unsafe { nil }
      |       ^
    9 | 
   10 |     mut b := Test{}
vlib/v/checker/tests/nil_to_option_err.vv:7:6: warning: unused variable: `a`
    5 | 
    6 | fn main() {
    7 |     mut a := ?int(none)
      |         ^
    8 |     a = unsafe { nil }
    9 |
vlib/v/checker/tests/nil_to_option_err.vv:3:4: error: cannot assign `nil` to a non-pointer field
    1 | struct Test {
    2 | mut:
    3 |     a ?int = unsafe { nil }
      |       ~~~~
    4 | }
    5 |
vlib/v/checker/tests/nil_to_option_err.vv:8:6: error: cannot assign `nil` to option value
    6 | fn main() {
    7 |     mut a := ?int(none)
    8 |     a = unsafe { nil }
      |         ~~~~~~
    9 | 
   10 |     mut b := Test{}
vlib/v/checker/tests/nil_to_option_err.vv:11:8: error: cannot assign `nil` to option value
    9 | 
   10 |     mut b := Test{}
   11 |     b.a = unsafe { nil }
      |           ~~~~~~
   12 | }
